<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".Registro">

    <LinearLayout
        android:id="@+id/llTop_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ImageView -->
        <ImageView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="Culture Icon"
            android:src="@drawable/img_101_logo"
            android:layout_marginBottom="17dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <!-- "Experencias culturales" -->
            <TextView
                android:id="@+id/tvExperencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/experencias_culturales"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="En Madrid"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="351dp"
        android:layout_height="578dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crea_tu_cuenta"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/nombre_de_usuario"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="@string/nombre_de_usuario"
                android:inputType="textPassword"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColorHint="@color/green" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/email"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="@string/email"
                android:inputType="textPassword"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColorHint="@color/green" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/contrasenia"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="@string/contrasenia"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColorHint="@color/green" />

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/repetir_contrase_a"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="@string/repetir_contrase_a"
                android:inputType="textPassword"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="00dp"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/cbTerms"
                    android:layout_width="38dp"
                    android:layout_height="match_parent"
                    android:minWidth="48dp"
                    android:minHeight="48dp"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="273dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/terminos"
                    android:textColor="@color/light_gray2"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/crear_cuenta"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>