<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearGrupo">

    <LinearLayout
        android:id="@+id/llTop_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/img_101_logo" />

        <TextView
            android:id="@+id/tvExperencias"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:text="@string/experencias_culturales"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="351dp"
        android:layout_height="578dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Crea tu Grupo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <View
                android:id="@+id/view12"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="Nombre de Grupo"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="Nombre de Grupo"
                android:inputType="text"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textColorHint="@color/green" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="Descripción"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="Descripción"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/green" />

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/contrasenia"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="@string/contrasenia"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/green" />

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/repetir_contrase_a"
                android:textColor="@color/light_gray2"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_gray"
                android:hint="@string/repetir_contrase_a"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/green" />

            <View
                android:id="@+id/view8"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <View
                android:id="@+id/view10"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <View
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:padding="10dp"
                android:text="Crear Grupo"
                android:textColor="@color/white" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>